Fix contrast issue

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -541,6 +541,7 @@ p {
   max-height: 540px;
   display: flex;
   align-items: center;
+  background-color: #020c1c;
 }
 
 .hero-img {
